# db-agent

./: .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  build.rs  compose.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
database/: drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
database/migrations/: 0000_fixed_valeria_richards.sql  0000_mean_lionheart.sql  0001_overjoyed_rictor.sql  0001_sticky_alex_power.sql
database/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
database/src/: index.ts  schema.ts
database/src/globals/: env.ts
src/: config.rs  main.rs  payload.rs  response.rs  stats.rs  tls.rs  utils.rs
src/commands/: completions.rs  configure.rs  diagnostics.rs  mod.rs  service_install.rs  version.rs
src/database/: data.rs  mod.rs
src/instance/: disk_checker.rs  identifier.rs  manager.rs  mod.rs
src/instance/connection/: mariadb.rs  mod.rs  mongodb.rs  postgres.rs  redis.rs
src/instance/executor/: docker.rs  mod.rs
src/instance/executor/docker/: host_mounts.rs  mod.rs
src/routes/: mod.rs
src/routes/api/: mod.rs
src/routes/api/databases/: mod.rs  utilization.rs
src/routes/api/databases/_database_/: export.rs  import.rs  logs.rs  mod.rs  power.rs  query.rs  utilization.rs
src/routes/api/databases/_database_/databases/: mod.rs
src/routes/api/databases/_database_/databases/_user_/: mod.rs  rotate_password.rs
src/routes/api/databases/_database_/users/: mod.rs
src/routes/api/databases/_database_/users/_user_/: mod.rs  rotate_password.rs
src/routes/api/databases/utilization/: mod.rs  ws.rs
src/routes/api/instances/: mod.rs
src/routes/api/instances/_instance_/: export.rs  import.rs  logs.rs  mod.rs  power.rs  query.rs  utilization.rs
src/routes/api/instances/_instance_/databases/: mod.rs
src/routes/api/instances/_instance_/databases/_database_/: mod.rs  recreate.rs  size.rs
src/routes/api/instances/_instance_/users/: mod.rs
src/routes/api/instances/_instance_/users/_user_/: mod.rs  rotate_password.rs
src/routes/api/instances/utilization/: mod.rs  ws.rs
src/routes/api/status/: mod.rs
src/routes/api/system/: config.rs  mod.rs  overview.rs  upgrade.rs
src/routes/api/system/stats/: ws.rs
src/subsystems/: mod.rs  status.rs
src/subsystems/database/: disk_checker.rs  identifier.rs  manager.rs  mod.rs  resources.rs
src/subsystems/database/connection/: mariadb.rs  mod.rs  mongodb.rs  postgres.rs  redis.rs
src/subsystems/database/executor/: docker.rs  mod.rs
src/subsystems/mariadb/: auth.rs  mod.rs  protocol.rs
src/subsystems/mongodb/: mod.rs  protocol.rs  scram.rs
src/subsystems/postgres/: mod.rs  protocol.rs  scram.rs
src/subsystems/redis/: mod.rs  resp.rs
