[package]
name = "db-agent"
version = "1.0.0"
edition = "2024"
rust-version = "1.95.0"

[dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "io-util", "macros", "signal", "process"] }
tokio-util = { version = "0.7.18", features = ["io-util"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["aws-lc-rs", "tls12"] }
rustls = { version = "0.23.40", features = ["aws-lc-rs"] }
rustls-pemfile = "2.2.0"
postgres-protocol = "0.6.12"
bytes = "1.11.1"
rand = "0.10.1"
sha2 = "0.11.0"
hmac = "0.13.0"
base64 = "0.22.1"
sha1 = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
serde_norway = "0.9.42"
serde_default = "0.2.0"
nestify = "0.3.3"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
axum = { version = "0.8.9", features = ["http2", "ws", "multipart"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
axum-extra = { version = "0.12.6", features = ["query"] }
tower-http = { version = "0.7.0", features = ["catch-panic"] }
utoipa = { version = "5.5.0", features = ["axum_extras", "preserve_order", "uuid", "chrono"] }
utoipa-axum = "0.2.0"
accept-header = "0.2.3"
mime = "0.3.17"
rmp-serde = "1.3.1"
colored = "3.1.1"
constant_time_eq = "0.5.0"
parking_lot = "0.12.5"
arc-swap = "1.9.1"
json-patch = "4.2.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "uuid"] }
futures-util = "0.3.32"
rustc-hash = "2.1.2"
bollard = "0.21.0"
async-trait = "0.1.89"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
itertools = "0.15.0"
cap-std = "4.0.0"
clap = { version = "4.5.37", features = ["derive", "string"] }
dialoguer = "0.12.0"
sysinfo = "0.39.0"
tracing-appender = "0.2.3"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
cidr = { version = "0.3.1", features = ["serde"] }
sntpc = { version = "0.10.1", features = ["std"] }
sntpc-net-tokio = "1.0.1"
tokio-postgres = { version = "0.7.18", default-features = false }
mysql_async = { version = "0.37.0", default-features = false, features = ["minimal"] }
redis = { version = "1.3.0", default-features = false, features = ["tokio-comp"] }
mongodb = "3.7.0"
bson = "2"

[profile.dev.package."*"]
opt-level = 2

[profile.dev]
debug = false

[profile.release.package."*"]
opt-level = "s"
codegen-units = 1
strip = true

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true

[lints.clippy]
all = { level = "warn", priority = -1 }

unwrap_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"

indexing_slicing = "deny"
string_slice = "deny"
unwrap_in_result = "deny"
panic_in_result_fn = "deny"
missing_panics_doc = "warn"
